--- a/portfolio.html
+++ b/portfolio.html
@@ -43,49 +43,49 @@
         <h2 class="visually-hidden">Opportunities</h2>
         <ul class="list">
           <li>
-            <img src="./images/portfolio-img-1.jpg" alt="Banking App">
+            <img src="./images/portfolio-img-1.jpg" alt="Banking App" width="360">
             <h3 class="subtitle">Banking App Interface Concept</h3>
             <p class="text">App</p>
           </li>
           <li>
-            <img src="./images/portfolio-img-2.jpg" alt="Cashless Payment">
+            <img src="./images/portfolio-img-2.jpg" alt="Cashless Payment" width="360">
             <h3 class="subtitle">Cashless Payment</h3>
             <p class="text">Marketing</p>
           </li>
           <li>
-            <img src="./images/portfolio-img-3.jpg" alt="Meditaion App">
+            <img src="./images/portfolio-img-3.jpg" alt="Meditaion App" width="360">
             <h3 class="subtitle">Meditaion App</h3>
             <p class="text">App</p>
           </li>
           <li>
-            <img src="./images/portfolio-img-4.jpg" alt="Taxi Service">
+            <img src="./images/portfolio-img-4.jpg" alt="Taxi Service" width="360">
             <h3 class="subtitle">Taxi Service</h3>
             <p class="text">Marketing</p>
           </li>
           <li>
             <img
               src="./images/portfolio-img-5.jpg"
-              alt="Screen Illustrations">
+              alt="Screen Illustrations" width="360">
             <h3 class="subtitle">Screen Illustrations</h3>
             <p class="text">Design</p>
           </li>
           <li>
-            <img src="./images/portfolio-img-6.jpg" alt="Online Courses">
+            <img src="./images/portfolio-img-6.jpg" alt="Online Courses" width="360">
             <h3 class="subtitle">Online Courses</h3>
             <p class="text">Marketing</p>
           </li>
           <li>
-            <img src="./images/portfolio-img-7.jpg" alt="Instagram Stories">
+            <img src="./images/portfolio-img-7.jpg" alt="Instagram Stories" width="360">
             <h3 class="subtitle">Instagram Stories Concept</h3>
             <p class="text">Design</p>
           </li>
           <li>
-            <img src="./images/portfolio-img-8.jpg" alt="Organic Food">
+            <img src="./images/portfolio-img-8.jpg" alt="Organic Food" width="360">
             <h3 class="subtitle">Organic Food</h3>
             <p class="text">Web Site</p>
           </li>
           <li>
-            <img src="./images/portfolio-img-9.jpg" alt="Fresh Coffee">
+            <img src="./images/portfolio-img-9.jpg" alt="Fresh Coffee" width="360">
             <h3 class="subtitle">Fresh Coffee</h3>
             <p class="text">Web Site</p>
           </li>
