--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- =========HERO=========== -->
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="btn-order" type="button">Order Service</button>
+        <button class="btn-order btn" type="button">Order Service</button>
       </section>
         <!-- =========ADVANTAGES========= -->
       <section>
