--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
   <body>
         <!-- =========HEADER========= -->
-    <header class="header">
-      <nav class="header-navigation">
-        <a class="logo-heading link" href="/index.html"><span 
+    <header>
+      <nav>
+        <a class="link" href="./index.html"><span 
           class="logo-accent link">Web</span>Studio</a>
         <ul class="list">
-          <li><a class="link" href="/index.html">Studio</a></li>
-          <li><a class="link" href="/portfolio.html">Portfolio</a></li>
+          <li><a class="link" href="./index.html">Studio</a></li>
+          <li><a class="link" href="./portfolio.html">Portfolio</a></li>
           <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
@@ -33,12 +33,13 @@
     <main>
         <!-- =========HERO=========== -->
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <h1 class="hero-title">Effective Solutions<br> 
+          for Your Business</h1>
         <button class="btn-order btn" type="button">Order Service</button>
       </section>
         <!-- =========ADVANTAGES========= -->
-      <section>
-        <h2>Advantages</h2>
+      <section class="headings-light">
+        <h2 class="visually-hidden">Advantages</h2>
         <ul class="list">
           <li>
             <h3 class="subtitle">Strategy</h3>
@@ -71,7 +72,7 @@
         </ul>
       </section>
         <!-- =========GALLERY========= -->
-      <section>
+      <section class="headings-light">
         <h2 class="title">What are we doing</h2>
         <ul class="list">
           <li><img src="./images/pic1.jpg" alt="Treking" width="360"></li>
@@ -81,7 +82,7 @@
       </section>
         <!-- ==========TEAM========== -->
       <section class="team">
-        <h2 class="--font-color">Our Team</h2>
+        <h2 class="title font-color">Our Team</h2>
         <ul class="list">
           <li>
             <img src="./images/photo1.jpg" alt="Mark Guerrero" width="264">
