--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
     </header>
     <main>
       <!-- ============BUTTONS============ -->
-      <section>
+      <section class="headings-light">
         <h2 class="visually-hidden">Filter</h2>
         <ul class="list">
           <li><button class="btn" type="button">All</button></li>
@@ -39,7 +39,7 @@
         </ul>
       </section>
       <!-- ===========OPPORTUNITIES========== -->
-      <section class="">
+      <section class="headings-light">
         <h2 class="visually-hidden">Opportunities</h2>
         <ul class="list">
           <li>
