--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <!-- =========HEADER========= -->
     <header>
       <nav>
-        <a class="link" href="./index.html"><span 
-          class="logo-accent link">Web</span>Studio</a>
+        <a class="logo link" href="./index.html"><span 
+          class="logo-accent link">WEB</span>STUDIO</a>
         <ul class="list">
           <li><a class="link" href="./index.html">Studio</a></li>
           <li><a class="link" href="./portfolio.html">Portfolio</a></li>
@@ -109,8 +109,8 @@
     </main>
             <!-- =========FOOTER========= -->
     <footer class="footer">
-      <a class="logo-heading link" href="/index.html"><span 
-          class="logo-accent link">Web</span>Studio</a>
+      <a class="logo link" href="/index.html"><span 
+          class="logo-accent link">WEB</span>STUDIO</a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
