--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <header class="header">
       <nav>
         <a class="logo link" href="/index.html"><span 
-          class="logo-accent link">Web</span>Studio</a>
+          class="logo-accent link">WEB</span>STUDIO</a>
         <ul class="list">
           <li><a class="link" href="/index.html">Studio</a></li>
           <li><a class="link" href="/portfolio.html">Portfolio</a></li>
@@ -94,8 +94,8 @@
     </main>
     <!-- ===========FOOTER============= -->
     <footer class="footer">
-      <a class="logo-heading link" href="/index.html"><span 
-          class="logo-accent link">Web</span>Studio</a>
+      <a class="logo link" href="/index.html"><span 
+          class="logo-accent link">WEB</span>STUDYO</a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
