--- a/portfolio.html
+++ b/portfolio.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" 
+    href="https://fonts.gstatic.com" crossorigin><link 
+    href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <!-- ========HEADER=========== -->
     <header class="header">
-      <nav>
-        <a class="logo link" href="/index.html"><span 
+      <a class="logo link" href="/index.html"><span 
           class="logo-accent link">WEB</span>STUDIO</a>
+      <nav>
         <ul class="list">
           <li><a class="link" href="/index.html">Studio</a></li>
           <li><a class="link" href="/portfolio.html">Portfolio</a></li>
