--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h1 class="hero-title">Effective Solutions<br> 
           for Your Business</h1>
         <button class="btn-order btn" type="button">Order Service</button>
-      </section>
+      </section> class="team-card"
         <!-- =========ADVANTAGES========= -->
       <section class="headings-light">
         <h2 class="visually-hidden">Advantages</h2>
@@ -84,22 +84,22 @@
       <section class="team">
         <h2 class="title font-color">Our Team</h2>
         <ul class="list">
-          <li>
+          <li class="team-card">
             <img src="./images/photo1.jpg" alt="Mark Guerrero" width="264">
             <h3 class="subtitle">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img src="./images/photo2.jpg" alt="Tom Ford" width="264">
             <h3 class="subtitle">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img src="./images/photo3.jpg" alt="Camila Garcia" width="264">
             <h3 class="subtitle">Camila Garcia</h3>
             <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="team-card">
             <img src="./images/photo4.jpg" alt="Daniel Wilson" width="264">
             <h3 class="subtitle">Daniel Wilson</h3>
             <p class="text">UI Designer</p>
@@ -109,7 +109,7 @@
     </main>
             <!-- =========FOOTER========= -->
     <footer class="footer">
-      <a class="logo link" href="/index.html"><span 
+      <a class="logo-footer link" href="/index.html"><span 
           class="logo-accent link">WEB</span>STUDIO</a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
