--- a/portfolio.html
+++ b/portfolio.html
@@ -35,60 +35,60 @@
       <section class="headings-light">
         <h2 class="visually-hidden">Filter</h2>
         <ul class="list">
-          <li><button class="btn" type="button">All</button></li>
-          <li><button class="btn" type="button">Web Site</button></li>
-          <li><button class="btn" type="button">App</button></li>
-          <li><button class="btn" type="button">Design</button></li>
-          <li><button class="btn" type="button">Marketing</button></li>
+          <li><button class="btn-filter btn" type="button">All</button></li>
+          <li><button class="btn-filter btn" type="button">Web Site</button></li>
+          <li><button class="btn-filter btn" type="button">App</button></li>
+          <li><button class="btn-filter btn" type="button">Design</button></li>
+          <li><button class="btn-filter btn" type="button">Marketing</button></li>
         </ul>
       </section>
       <!-- ===========OPPORTUNITIES========== -->
       <section class="headings-light">
         <h2 class="visually-hidden">Opportunities</h2>
         <ul class="list">
-          <li>
+          <li class="project-card">
             <img src="./images/portfolio-img-1.jpg" alt="Banking App" width="360">
             <h3 class="subtitle">Banking App Interface Concept</h3>
             <p class="text">App</p>
           </li>
-          <li>
+          <li class="project-card">
             <img src="./images/portfolio-img-2.jpg" alt="Cashless Payment" width="360">
             <h3 class="subtitle">Cashless Payment</h3>
             <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="project-card">
             <img src="./images/portfolio-img-3.jpg" alt="Meditaion App" width="360">
             <h3 class="subtitle">Meditaion App</h3>
             <p class="text">App</p>
           </li>
-          <li>
+          <li class="project-card">
             <img src="./images/portfolio-img-4.jpg" alt="Taxi Service" width="360">
             <h3 class="subtitle">Taxi Service</h3>
             <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="project-card">
             <img
               src="./images/portfolio-img-5.jpg"
               alt="Screen Illustrations" width="360">
             <h3 class="subtitle">Screen Illustrations</h3>
             <p class="text">Design</p>
           </li>
-          <li>
+          <li class="project-card">
             <img src="./images/portfolio-img-6.jpg" alt="Online Courses" width="360">
             <h3 class="subtitle">Online Courses</h3>
             <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="project-card">
             <img src="./images/portfolio-img-7.jpg" alt="Instagram Stories" width="360">
             <h3 class="subtitle">Instagram Stories Concept</h3>
             <p class="text">Design</p>
           </li>
-          <li>
+          <li class="project-card">
             <img src="./images/portfolio-img-8.jpg" alt="Organic Food" width="360">
             <h3 class="subtitle">Organic Food</h3>
             <p class="text">Web Site</p>
           </li>
-          <li>
+          <li class="project-card">
             <img src="./images/portfolio-img-9.jpg" alt="Fresh Coffee" width="360">
             <h3 class="subtitle">Fresh Coffee</h3>
             <p class="text">Web Site</p>
@@ -98,7 +98,7 @@
     </main>
     <!-- ===========FOOTER============= -->
     <footer class="footer">
-      <a class="logo link" href="/index.html"><span 
+      <a class="logo-footer link" href="/index.html"><span 
           class="logo-accent link">WEB</span>STUDYO</a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
