--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h1 class="hero-title">Effective Solutions<br> 
           for Your Business</h1>
         <button class="btn-order btn" type="button">Order Service</button>
-      </section> class="team-card"
+      </section>
         <!-- =========ADVANTAGES========= -->
       <section class="headings-light">
         <h2 class="visually-hidden">Advantages</h2>
