--- a/index.html
+++ b/index.html
@@ -1,116 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" 
-    href="https://fonts.gstatic.com" crossorigin><link 
-    href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-    rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <!-- =========header========= -->
   <body>
-        <!-- =========HEADER========= -->
     <header>
       <nav>
-        <a class="logo link" href="./index.html"><span 
-          class="logo-accent link">WEB</span>STUDIO</a>
-        <ul class="list">
-          <li><a class="link" href="./index.html">Studio</a></li>
-          <li><a class="link" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="link" href="">Contacts</a></li>
+        <a class="logo" href="./index.html"
+          ><span class="logo-Web">Web</span>Studio</a>
+        <ul>
+          <li>
+            <a class="link-first" href="./index.html">Studio</a>
+          </li>
+          <li><a class="link-first" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="link-first" href="#">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul class="list">
-          <li><a class="address link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="address link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul>
+          <li>
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
-
     <main>
-        <!-- =========HERO=========== -->
+      <!-- =========hero=========== -->
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions<br> 
-          for Your Business</h1>
-        <button class="btn-order btn" type="button">Order Service</button>
+        <h1>
+          Effective Solutions <br />
+          for Your Business
+        </h1>
+        <button class="button-hirou" type="button">Order Service</button>
       </section>
-        <!-- =========ADVANTAGES========= -->
-      <section class="headings-light">
-        <h2 class="visually-hidden">Advantages</h2>
-        <ul class="list">
+      <!-- =========features========= -->
+      <section>
+        <h2 class="visually-hidden">features</h2>
+        <ul>
           <li>
-            <h3 class="subtitle">Strategy</h3>
-            <p class="text">
+            <h3 class="text-features-title">Strategy</h3>
+            <p class="text-features-p">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="subtitle">Punctuality</h3>
-            <p class="text">
+            <h3 class="text-features-title">Punctuality</h3>
+            <p class="text-features-p">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="subtitle">Diligence</h3>
-            <p class="text">
+            <h3 class="text-features-title">Diligence</h3>
+            <p class="text-features-p">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="subtitle">Technologies</h3>
-            <p class="text">
+            <h3 class="text-features-title">Technologies</h3>
+            <p class="text-features-p">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-        <!-- =========GALLERY========= -->
-      <section class="headings-light">
-        <h2 class="title">What are we doing</h2>
-        <ul class="list">
-          <li><img src="./images/pic1.jpg" alt="Treking" width="360"></li>
-          <li><img src="./images/pic2.jpg" alt="MobileAPP" width="360"></li>
-          <li><img src="./images/pic3.jpg" alt="Conection" width="360"></li>
+      <!-- =========gallery========= -->
+      <section>
+        <h2 class="text-what-are">What are we doing</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/pic1.jpg"
+              alt="desktop_software"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/pic2.jpg"
+              alt="smartphone software"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/pic3.jpg"
+              alt="smartphone in hand"
+              width="360"
+              height="300"
+            />
+          </li>
         </ul>
       </section>
-        <!-- ==========TEAM========== -->
-      <section class="team">
-        <h2 class="title font-color">Our Team</h2>
-        <ul class="list">
-          <li class="team-card">
-            <img src="./images/photo1.jpg" alt="Mark Guerrero" width="264">
-            <h3 class="subtitle">Mark Guerrero</h3>
-            <p class="text">Product Designer</p>
+      <!-- ==========team========== -->
+      <section class="section-our-team">
+        <h2 class="text-our-team">Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/photo1.jpg"
+              alt="Mark Guerrero"
+              width="264"
+              height="260"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
           </li>
-          <li class="team-card">
-            <img src="./images/photo2.jpg" alt="Tom Ford" width="264">
-            <h3 class="subtitle">Tom Ford</h3>
-            <p class="text">Frontend Developer</p>
+          <li>
+            <img
+              src="./images/photo2.jpg"
+              alt="Frontend Developer"
+              width="264"
+              height="260"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
-          <li class="team-card">
-            <img src="./images/photo3.jpg" alt="Camila Garcia" width="264">
-            <h3 class="subtitle">Camila Garcia</h3>
-            <p class="text">Marketing</p>
+          <li>
+            <img
+              src="./images/photo3.jpg"
+              alt="Camila Garcia"
+              width="264"
+              height="260"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
-          <li class="team-card">
-            <img src="./images/photo4.jpg" alt="Daniel Wilson" width="264">
-            <h3 class="subtitle">Daniel Wilson</h3>
-            <p class="text">UI Designer</p>
+          <li>
+            <img
+              src="./images/photo4.jpg"
+              alt="Daniel Wilson"
+              width="264"
+              height="260"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-            <!-- =========FOOTER========= -->
-    <footer class="footer">
-      <a class="logo-footer link" href="/index.html"><span 
-          class="logo-accent link">WEB</span>STUDIO</a>
+    <!-- =========footer========= -->
+    <footer>
+      <a class="logo" href="./index.html"
+        ><span class="logo-Web">Web</span
+        ><span class="logo-footer-studio">Studio</span>
+      </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
