--- a/portfolio.html
+++ b/portfolio.html
@@ -1,103 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebStudio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" 
-    href="https://fonts.gstatic.com" crossorigin><link 
-    href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-    rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"/>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- ========HEADER=========== -->
-    <header class="header">
-      <a class="logo link" href="/index.html"><span 
-          class="logo-accent link">WEB</span>STUDIO</a>
+    <header>
       <nav>
-        <ul class="list">
-          <li><a class="link" href="/index.html">Studio</a></li>
-          <li><a class="link" href="/portfolio.html">Portfolio</a></li>
-          <li><a class="link" href="">Contacts</a></li>
+        <a class="logo" href="./index.html"
+          ><span class="logo-Web">Web</span>Studio</a
+        >
+        <ul>
+          <li>
+            <a class="link-first" href="./index.html">Studio</a>
+          </li>
+          <li><a class="link-first" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="link-first" href="#">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul class="list">
-          <li><a class="address link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="address link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul>
+          <li>
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <!-- ============BUTTONS============ -->
-      <section class="headings-light">
-        <h2 class="visually-hidden">Filter</h2>
-        <ul class="list">
-          <li><button class="btn-filter btn" type="button">All</button></li>
-          <li><button class="btn-filter btn" type="button">Web Site</button></li>
-          <li><button class="btn-filter btn" type="button">App</button></li>
-          <li><button class="btn-filter btn" type="button">Design</button></li>
-          <li><button class="btn-filter btn" type="button">Marketing</button></li>
+      <section class="filter">
+        <h2 class="visually-hidden">filter</h2>
+        <ul>
+          <li><button type="button">All</button></li>
+          <li><button type="button">Web Site</button></li>
+          <li><button type="button">App</button></li>
+          <li><button type="button">Design</button></li>
+          <li><button type="button">Marketing</button></li>
         </ul>
-      <!-- ===========OPPORTUNITIES========== -->
-        <h2 class="visually-hidden">Opportunities</h2>
-        <ul class="list">
-          <li class="project-card">
-            <img src="./images/portfolio-img-1.jpg" alt="Banking App" width="360">
-            <h3 class="subtitle">Banking App Interface Concept</h3>
-            <p class="text">App</p>
+        <h2 class="visually-hidden">portfolio elements</h2>
+        <ul>
+          <li>
+            <a href="#"
+              ><img
+                src="./images/portfolio-img-1.jpg"
+                alt="Banking App Interface Concept"
+                width="360"
+                height="300"
+              />
+              <h3 class="text-features-title">Banking App Interface Concept</h3>
+              <p class="text-features-p">App</p></a
+            >
           </li>
-          <li class="project-card">
-            <img src="./images/portfolio-img-2.jpg" alt="Cashless Payment" width="360">
-            <h3 class="subtitle">Cashless Payment</h3>
-            <p class="text">Marketing</p>
+          <li>
+            <a href="#"
+              ><img
+                src="./images/portfolio-img-2.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="text-features-title">Cashless Payment</h3>
+              <p class="text-features-p">Marketing</p></a
+            >
           </li>
-          <li class="project-card">
-            <img src="./images/portfolio-img-3.jpg" alt="Meditaion App" width="360">
-            <h3 class="subtitle">Meditaion App</h3>
-            <p class="text">App</p>
+          <li>
+            <a href="#">
+              <img
+                src="./images/portfolio-img-3.jpg"
+                alt="Meditaion App"
+                width="360"
+                height="300"
+              />
+              <h3 class="text-features-title">Meditaion App</h3>
+              <p class="text-features-p">App</p></a
+            >
           </li>
-          <li class="project-card">
-            <img src="./images/portfolio-img-4.jpg" alt="Taxi Service" width="360">
-            <h3 class="subtitle">Taxi Service</h3>
-            <p class="text">Marketing</p>
+          <li>
+            <a href="#">
+              <img
+                src="./images/portfolio-img-4.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h3 class="text-features-title">Taxi Service</h3>
+              <p class="text-features-p">Marketing</p></a
+            >
           </li>
-          <li class="project-card">
-            <img
-              src="./images/portfolio-img-5.jpg"
-              alt="Screen Illustrations" width="360">
-            <h3 class="subtitle">Screen Illustrations</h3>
-            <p class="text">Design</p>
+          <li>
+            <a href="#"
+              ><img
+                src="./images/portfolio-img-5.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="text-features-title">Screen Illustrations</h3>
+              <p class="text-features-p">Design</p></a
+            >
           </li>
-          <li class="project-card">
-            <img src="./images/portfolio-img-6.jpg" alt="Online Courses" width="360">
-            <h3 class="subtitle">Online Courses</h3>
-            <p class="text">Marketing</p>
+          <li>
+            <a href="#">
+              <img
+                src="./images/portfolio-img-6.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h3 class="text-features-title">Online Courses</h3>
+              <p class="text-features-p">Marketing</p></a
+            >
           </li>
-          <li class="project-card">
-            <img src="./images/portfolio-img-7.jpg" alt="Instagram Stories" width="360">
-            <h3 class="subtitle">Instagram Stories Concept</h3>
-            <p class="text">Design</p>
+          <li>
+            <a href="#"
+              ><img
+                src="./images/portfolio-img-7.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+                height="300"
+              />
+              <h3 class="text-features-title">Instagram Stories Concept</h3>
+              <p class="text-features-p">Design</p></a
+            >
           </li>
-          <li class="project-card">
-            <img src="./images/portfolio-img-8.jpg" alt="Organic Food" width="360">
-            <h3 class="subtitle">Organic Food</h3>
-            <p class="text">Web Site</p>
+          <li>
+            <a href="#"
+              ><img
+                src="./images/portfolio-img-8.jpg"
+                alt="Organic Food"
+                width="360"
+                height="300"
+              />
+              <h3 class="text-features-title">Organic Food</h3>
+              <p class="text-features-p">Web Site</p></a
+            >
           </li>
-          <li class="project-card">
-            <img src="./images/portfolio-img-9.jpg" alt="Fresh Coffee" width="360">
-            <h3 class="subtitle">Fresh Coffee</h3>
-            <p class="text">Web Site</p>
+          <li>
+            <a href="#"
+              ><img
+                src="./images/portfolio-img-9.jpg"
+                alt="Fresh Coffee"
+                width="360"
+                height="300"
+              />
+              <h3 class="text-features-title">Fresh Coffee</h3>
+              <p class="text-features-p">Web Site</p></a
+            >
           </li>
         </ul>
       </section>
     </main>
-    <!-- ===========FOOTER============= -->
-    <footer class="footer">
-      <a class="logo-footer link" href="/index.html"><span 
-          class="logo-accent link">WEB</span>STUDYO</a>
+    <footer>
+      <a class="logo" href="./index.html"
+        ><span class="logo-Web">Web</span
+        ><span class="logo-footer-studio">Studio</span>
+      </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
