--- a/portfolio.html
+++ b/portfolio.html
@@ -30,12 +30,12 @@
       <address>
         <ul class="list">
           <li>
-            <a class="link" href="mailto:info@devstudio.com"
+            <a class="link link-address" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="link link-address" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -167,7 +167,7 @@
     </main>
     <!-- =========footer========= -->
     <footer class="footer">
-      <a class="logo" href="./index.html"
+      <a class="logo-footer" href="./index.html"
         ><span class="logo-web">Web</span
         ><span class="logo-footer-studio">Studio</span>
       </a>
