--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
     <main>
       <!-- ========button======= -->
       <section class="filter">
-        <h2 class="visually-hidden">filter</h2>
+        <h1 class="visually-hidden">filter</h1>
         <ul class="list">
           <li><button type="button" class="filter-btn">All</button></li>
           <li><button type="button" class="filter-btn">Web Site</button></li>
@@ -52,19 +52,16 @@
           <li><button type="button" class="filter-btn">Marketing</button></li>
         </ul>
         <!-- ========elements======== -->
-        <h2 class="visually-hidden">portfolio elements</h2>
         <ul class="list">
           <li>
-            <a class="link" href="#"
-              ><img
+            <a class="link" href="#"><img
                 src="./images/portfolio-img-1.jpg"
                 alt="Banking App Interface Concept"
                 width="360"
                 height="300"
-              />
-              <h3 class="features-title">Banking App Interface Concept</h3>
-              <p class="text-features">App</p></a
-            >
+                />
+              <h2 class="features-title">Banking App Interface Concept</h2>
+              <p class="text-features">App</p></a>
           </li>
           <li>
             <a class="link" href="#"
@@ -74,7 +71,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="features-title">Cashless Payment</h3>
+              <h2 class="features-title">Cashless Payment</h2>
               <p class="text-features">Marketing</p></a
             >
           </li>
@@ -86,7 +83,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="features-title">Meditaion App</h3>
+              <h2 class="features-title">Meditaion App</h2>
               <p class="text-features">App</p></a
             >
           </li>
@@ -98,7 +95,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="features-title">Taxi Service</h3>
+              <h2 class="features-title">Taxi Service</h2>
               <p class="text-features">Marketing</p></a
             >
           </li>
@@ -110,7 +107,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="features-title">Screen Illustrations</h3>
+              <h2 class="features-title">Screen Illustrations</h2>
               <p class="text-features">Design</p></a
             >
           </li>
@@ -122,7 +119,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="features-title">Online Courses</h3>
+              <h2 class="features-title">Online Courses</h2>
               <p class="text-features">Marketing</p></a
             >
           </li>
@@ -134,7 +131,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="features-title">Instagram Stories Concept</h3>
+              <h2 class="features-title">Instagram Stories Concept</h2>
               <p class="text-features">Design</p></a
             >
           </li>
@@ -146,7 +143,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="features-title">Organic Food</h3>
+              <h2 class="features-title">Organic Food</h2>
               <p class="text-features">Web Site</p></a
             >
           </li>
@@ -158,7 +155,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="features-title">Fresh Coffee</h3>
+              <h2 class="features-title">Fresh Coffee</h2>
               <p class="text-features">Web Site</p></a
             >
           </li>
